# zonemaster-api

./: .env  .env.example  .gitignore  CLAUDE.md  DOCKER_BUILD.md  Dockerfile  LICENSE  README.md  alembic.ini  app.db  docker-compose.yml  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_dns_tables.py
app/: main.py
app/api/: health.py
app/api/v1/: api.py
app/api/v1/endpoints/: dns_check.py
app/core/: config.py
app/crud/: __init__.py  dns_check.py  dns_result.py
app/db/: __init__.py  session.py
app/models/: __init__.py  dns_check.py  dns_result.py
app/schemas/: __init__.py  dns_check.py
app/services/: __init__.py  zonemaster_service.py
tests/: test_main.py
tests/api/v1/: test_dns_check.py
